<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="search">Search</string>
    <string name="delete">Delete Book</string>
    <string name="pref_startScreen">Select Startscreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_header">Click SCAN to read barcode</string>
    <string name="barcode_success">Sucessfully scanned barcode</string>
    <string name="barcode_failure">Unable to read barcode</string>
    <string name="barcode_error">Error reading barcode</string>
    <string name="permission_camera_rationale">access to camera needed</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">Camera permission not available</string>
    <string name="dialog_scan_status">Scan Status</string>
    <string name="cancel">Cancel</string>

    <string name="no_network">No Network available to fetch book data</string>
    <string name="no_books">The book list is empty.Add a book you like!!</string>
    <string name="book_detail">Book Detail</string>
    <string name="scan_dialog_default">Scan</string>
    <string name="invalid_barcode">Invalid Barcode</string>
    <string name="status">Processing</string>
    <string name="book_saved_status">Book Saved</string>
    <string name="book_deleted">Book Deleted</string>
    <string name="intial_status">Enter ISBN in textBox or click SCAN button to start scanning for barcode</string>
    <string name="barcode">Scanned Barcode is:</string>
    <string name="intent_data_null">No barcode captured, intent data is null</string>
</resources>
