<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBook">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="start|center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/eancontainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_hint"
                android:inputType="number"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:minEms="@integer/ean_width"
                android:paddingRight="20dp"
                android:saveEnabled="true" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button" />

            <TextView
                android:id="@+id/status_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/barcode_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">

            <ImageView
                android:id="@+id/bookCover"
                android:layout_width="@dimen/list_icon"
                android:layout_height="@dimen/list_icon"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/abc_list_item_padding_horizontal_material"
                android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
                android:contentDescription="@string/book_cover" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <!--android:textSize="@dimen/head_line"-->
                <TextView
                    android:id="@+id/bookTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:paddingRight="20dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textIsSelectable="true"
                    tools:text="Title" />

                <TextView
                    android:id="@+id/bookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/secondary_text"
                    tools:text="Sub Title"/>

                <TextView
                    android:id="@+id/authors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="end"
                    android:textSize="@dimen/small_fontsize"
                    tools:text="Author"/>

                <TextView
                    android:id="@+id/categories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/bookCover"
                    android:layout_marginTop="20dp"
                    android:textSize="@dimen/small_fontsize"
                    tools:text="Category"/>


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_discard"
                android:text="@string/cancel_button"
                android:textColor="@color/primary_dark"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_action_accept"
                android:text="@string/ok_button"
                android:textColor="@color/primary_dark"
                android:visibility="invisible" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>
